# room-reservation

./: .env  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4a9f082f4566_add_description_to_meetingroom.py  51df48dc68f2_first_migration.py  eef3bbc63100_add_reservation_model.py
room_reservation/: main.py
room_reservation/api/: meeting_room.py  routers.py  validators.py
room_reservation/api/endpoints/: meeting_room.py  reservation.py
room_reservation/core/: base.py  config.py  db.py
room_reservation/crud/: base.py  meeting_room.py  reservation.py
room_reservation/models/: __init__.py  meeting_room.py  reservation.py
room_reservation/schemas/: meeting_room.py  reservation.py
