[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "room-reservation"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python",
]
dependencies = []

[tool.hatch.version]
path = "room_reservation/__init__.py"
